--- a/src/index.html
+++ b/src/index.html
@@ -16,5 +16,6 @@
 <body>
   <pre style="color:maroon" data-bind="text:error,visible:error"></pre>
   <pre style="color:darkgreen" data-bind="text:configer"></pre>
+  <pre style="color:dodgerblue" data-bind="text:done"></pre>
 </body>
 </html>
